[package]
name = "mortem"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mibmo/mortem"
description = "Easy self-deleting executables"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.12", default-features = true, features = ["attributes"] }
